@@ -3,7 +3,7 @@
         {
             "label": "Inject",
             "window_name": "UE4-DDS-Tools (Inject mode)",
-            "command": "python\\python.exe src\\main.py %uasset% %texture% --save_folder=%out% --version=%version% %option%",
+            "command": "python\\python.exe src\\main.py %uasset% %texture% --save_folder=%out% --version=%version%%options%",
             "button": "Inject",
             "components": [
                 {
@@ -24,7 +24,8 @@
                     "type": "folder",
                     "label": "Output folder",
                     "add_quotes": true,
-                    "empty_message": "Drop a folder here!"
+                    "empty_message": "Drop a folder here!",
+                    "default": "injected"
 
                 },
                 {
@@ -37,7 +38,7 @@
                     "type": "check_array",
                     "label": "Options",
                     "items": ["No mipmaps", "Force uncompressed"],
-                    "values": ["--no_mipmaps", "--force_uncompressed"]
+                    "values": [" --no_mipmaps", " --force_uncompressed"]
                 }
             ]
         },
@@ -58,7 +59,8 @@
                     "type": "folder",
                     "label": "Output folder",
                     "add_quotes": true,
-                    "empty_message": "Drop a folder here!"
+                    "empty_message": "Drop a folder here!",
+                    "default": "exported"
                 },
                 {
                     "type": "choice",
@@ -118,13 +120,22 @@
                     "type": "folder",
                     "label": "Output folder",
                     "add_quotes": true,
-                    "empty_message": "Drop a folder here!"
+                    "empty_message": "Drop a folder here!",
+                    "default": "converted"
                 },
                 {
                     "type": "choice",
                     "label": "Convert to",
-                    "items": [".png", ".jpg", ".bmp", ".tga", ".hdr", "BC1U (DXT1)", "BC3U (DXT5)", "BC4U", "BC5U", "BC6HU", "BC7U", "B8G8R8A8", "FloatRGBA16"],
-                    "values": ["png", "jpg", "bmp", "tga", "hdr", "BC1_UNORM", " BC3_UNORM", "BC4_UNORM", "BC5_UNORM", "BC6H_UF16", "BC7_UNORM", "B8G8R8A8_UNORM_SRGB", "R16G16B16A16_FLOAT"],
+                    "items": [
+                        ".png", ".jpg", ".bmp", ".tga", ".hdr",
+                        "BC1U (DXT1)", "BC3U (DXT5)", "BC4U", "BC5U", "BC6HU", "BC7U",
+                        "R8", "R8G8", "B8G8R8A8", "FloatRGBA16"
+                    ],
+                    "values": [
+                        "png", "jpg", "bmp", "tga", "hdr",
+                        "BC1_UNORM", " BC3_UNORM", "BC4_UNORM", "BC5_UNORM", "BC6H_UF16", "BC7_UNORM",
+                        "R8_UNORM", "R8G8_UNORM", "B8G8R8A8_UNORM", "R16G16B16A16_FLOAT"
+                    ],
                     "default": 3
                 },
                 {
